In effetti .getFirst() e .get(0) sono la stessa cosa...